Fixed header background position

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -19,7 +19,7 @@
 		padding: 0 $gutter;
 	}
 	background-image: url(https://lh3.googleusercontent.com/kEQRnOwrnySq73PSoLg8OFcwtYX4KfUGajF_H-LToRw=s0);
-	background-position-x: center;
+	background-position: center top;
 	background-repeat: no-repeat;
 }
 .site-title {
