Multi language navigation support

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,11 @@
 <header id="masthead">
   <div class="inner-wrap">
-    <a href="{{ site.url }}/" class="site-title">{{ site.title }}</a>
+  	{% assign language = page.path | split: "/" | first %}
+	{% assign code = "default" %}
+	{% if language.size == 2 %}
+		{% assign code = language %}
+	{% endif %}
+    <a href="/{% if code.size == 2 %}{{ code }}/{% endif %}" class="site-title">{{ site.title }}</a>
     <nav role="navigation" class="menu top-menu">
         {% include navigation.html %}
     </nav>
