--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <ul class="menu-item">
-	<li class="home"><a href="/">{{ site.title }}</a></li>
-	{% for link in site.data.navigation %}
+	{% for item in site.data.navigation %}
+	{% assign link = item.[code] %}
     {% if link.url contains 'http' %}
         {% assign domain = '' %}
         {% else %}
