--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -39,6 +39,12 @@
 	font-size: 3em;
 	width: auto !important;
 }
+.site-subtitle {
+	float: right;
+	font-size: 0.4em;
+	margin: 0.2em 0.8em 0 0;
+	text-transform: none;
+}
 
 
 /*
@@ -66,7 +72,6 @@
 				content: '';
 				display: block;
 				position: absolute;
-				top: 0;
 				left: 0;
 				height: 2px;
 				@include transition(width 0.3s);
