Remove extra horizontal ruler if categories tile is empty

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -24,11 +24,14 @@ layout: default
 					{% for post in site.categories[category] %}
 						{% assign last = post.categories | last %}
 						{% if last == category %}
+							{% assign ruler = 1 %}
 							{% include post-grid.html %}
 						{% endif %}
 					{% endfor %}
 				</div>
+				{% if ruler %}
 				<hr />
+				{% endif %}
 				<aside>
 					{% if page.comments == true %}{% include comments.html %}{% endif %}
 				</aside>
