--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
       <script src="{{ site.url }}/js/vendor/html5shiv.min.js"></script>
       <script src="{{ site.url }}/js/vendor/respond.min.js"></script>
     <![endif]-->
+    {% if jekyll.environment == "production" %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -36,6 +37,7 @@
       ga('send', 'pageview');
     </script>
     <!-- TradeDoubler site verification 2526211 -->
+    {% endif %}
   </head>
 
   <body id="js-body">
