--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
     {% include header.html %}
 
     <div id="page-wrapper" class="wrap">
+      <div class="warning">Unfortunately Google Photos is being updated and some of the pictures might not work</div>
       {{ content }}
       {% include footer.html %}
     </div>
