--- a/_sass/_helpers.scss
+++ b/_sass/_helpers.scss
@@ -16,6 +16,14 @@
   @include animation(none);
 }
 
+.warning {
+  clear: both;
+  background: yellow;
+  border: 1px solid darkkhaki;
+  padding: 0.5em;
+  display: inline-block;
+}
+
 /*
    Hide
    ========================================================================== */
