--- a/_includes/languages.html
+++ b/_includes/languages.html
@@ -1,4 +1,4 @@
-<div style="float: right;margin-top: 17px;margin-right: -34px;">
+<div style="padding-top: 17px;position: absolute;right: 0">
   {% for item in site.data.languages %}
     {% if item.locale != locale %}
   		<a href="{{ item.url }}"><img src="{{ item.image }}" style="width: 16px;"></a>
