--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,7 @@
       ga('send', 'pageview');
     </script>
     <!-- TradeDoubler site verification 2526211 -->
+    <meta name="p:domain_verify" content="32cf4ad9e0d56965a83841c8b2e44377"/>
     {% endif %}
   </head>
 
