--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,6 +13,7 @@ layout: default
 		</div><!-- /.page-feature -->
 		{% endif %}
 		<div class="inner-wrap">
+			{% include parent-navigation.html %}
 			<div id="content" class="page-content" itemprop="articleBody">
 				{{ content }}
 				<hr />
