--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -14,6 +14,7 @@ layout: default
 		{% endif %}
 		<div class="page-title">
 			<h1>{{ page.title }}</h1>
+			{% include parent-navigation.html %}
 		</div>
 		<div class="inner-wrap">
 			<div id="content" class="page-content" itemprop="articleBody">
