--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,6 @@
 <ul class="menu-item">
 	{% for item in site.data.navigation %}
 	{% assign link = item.[locale] %}
-    {% if link.url contains 'http' %}
-        {% assign domain = '' %}
-        {% else %}
-        {% assign domain = site.url %}
-    {% endif %}
-    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank"{% endif %}>{{ link.title }}</a></li>
-  {% endfor %}
+	<li><a href="{{ link.url }}">{{ link.title }}</a></li>
+	{% endfor %}
 </ul>
