--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -18,7 +18,7 @@
 		@include outer-container;
 		padding: 0 $gutter;
 	}
-	background-image: url(https://lh3.googleusercontent.com/kEQRnOwrnySq73PSoLg8OFcwtYX4KfUGajF_H-LToRw=s0);
+	background-image: url(https://b2.minimuutti.com/file/minimuutti-com/muut/DSC12533-banneri2.jpg);
 	background-position: center top;
 	background-repeat: no-repeat;
 	margin-bottom: 2em;
