--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,14 +27,14 @@
       <script src="/js/vendor/respond.min.js"></script>
     <![endif]-->
     {% if jekyll.environment == "production" %}
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SWE4RLDPQW"></script>
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-      ga('create', 'UA-65188616-1', 'auto');
-      ga('send', 'pageview');
+      gtag('config', 'G-SWE4RLDPQW');
     </script>
     <!-- TradeDoubler site verification 2526211 -->
     <meta name="p:domain_verify" content="32cf4ad9e0d56965a83841c8b2e44377"/>
